Updated JQuery version from 1.11.2 to 1.11.3. Fixed issue on Firefox for table component in which the thead was occupying the entire tbody. Fixed issue on Firefox related to load animation inside button and other components.

--- a/src/main/resources/jsmart/css/jsmart.css
+++ b/src/main/resources/jsmart/css/jsmart.css
@@ -107,6 +107,11 @@
 	position: relative;
 }
 
+.js5-table-head {
+    width: 100%;
+    display: inline-block;
+}
+
 .js5-table-scroll {
 	
 }
